--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <div id="main">
     <article id="me" class="panel">
       <header>
-        <h1>Hello! I'm Karina Reoligio</h1>
+        <h1>Hello! I'm Karina</h1>
         <span class="byline">contact number: 09107550534 <br> email address: karinareoligio23@yahoo.com</span> 
         </header>
   
